--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -2653,107 +2653,107 @@ stories:
   domain: http://www.cnhi.com/register/
   link: https://www.cnhi.com/home-owner-discovers-burglar-offered-hit-of-meth/article_c7c39b0e-9dc9-11e9-9b90-fb94808d669a.html
 images:
-- name: crow_dark_dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_dali.jpg
-- name: bordercrossing-bordercrossing-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-crabapple.jpg
 - name: crow-crow-satan-red.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-satan-red.jpg
-- name: art-museum-art-museum-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-oily-mcoilface.jpg
-- name: birdhouse-birdhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-aqua.jpg
-- name: razorcliff-razorcliff.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff.jpg
-- name: aws-s3-square-dragon-close-up-yellow-collage-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-dragon-close-up-yellow-collage-square.jpg
-- name: oldtrain-oldtrain-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-umberto-bocc.jpg
-- name: blossombar-oily-mcoilface-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-00-00.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-smoking-cigarette.jpg
-- name: hollywood-building-hollywood-building-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-atari-missle.jpg
-- name: amusement-park-amusement-park-2-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-brush.jpg
-- name: containership-containership-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-kand-two.jpg
-- name: old-house-oldhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-alberto-giacometti.jpg
-- name: server-cloud-server-racks-door-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-graham-sutherland.jpg
-- name: gypsymosaic-gypsy-eyes-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-marcel-duchamp.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-propaganda-leaflets.jpg
-- name: locked-up-steam-lock-up-steam-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-creativity.jpg
-- name: gypsymosaic-gypsy-eyes-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-gred-mash.jpg
-- name: window-window-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-matrix.jpg
-- name: window-window-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-umberto-bocc.jpg
-- name: old-door-lock-old-door-lock-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-smooth-ride.jpg
-- name: old-door-lock-old-door-lock-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-constitution.jpg
-- name: downtown-los-angeles-downtown-la-gred-mash.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-gred-mash.JPG
-- name: los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
-- name: meadowbutterfly-meadow-butterfly-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-satan-red.jpg
-- name: amusement-park-amusement-park-2-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-internet-numbers.jpg
-- name: berlinwall-DSC-0084-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-yellow-paper.jpg
-- name: san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
-- name: legal-statue-legalstatue-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-satan-red.jpg
-- name: bordercrossing-bordercrossing-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-ww2-color.jpg
-- name: stories-containership-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-deep-connections.jpg
-- name: nazi-invasion-IMG_8312.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8312.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
-- name: rockingchair-rockingchair-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-smooth-ride.jpg
-- name: stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-- name: razorcliff-razorcliff-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purple-pond.jpg
-- name: udnie-DSC_0079.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0079.jpg
-- name: san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
-- name: christianity-christianity-under-construction-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-purp-paper.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-circuit-5.jpg
-- name: stories-power-lines-empty-space-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-power-lines-empty-space-copper-circuit.jpg
-- name: christianity-christianity-under-construction-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-spagetti-accident.jpg
-- name: carry-load-carryload-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-atari-missle.jpg
-- name: power-lines-power-lines-empty-space-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dry-skin.jpg
-- name: stories-new-49-127-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-49-127-800-500-0-max-0-1--1.jpg
-- name: nyc-flag-nycflag-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-sunday.jpg
-- name: fence-mexico-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-cinnamon-rolls.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-ww2-dresden.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-- name: nyc-flag-nycflag-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-yellow-paper.jpg
+- name: san-francisco-street-view-san-francisco-street-view-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-matrix.jpg
+- name: power-lines-power-lines-empty-space-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-internet-numbers.jpg
+- name: yuma-bank-yuma-bak-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-aqua.jpg
+- name: power-lines-power-lines-empty-space-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-diego-rivera1.jpg
+- name: aws-s3-lighthouse-lighthouse-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still-1200.jpg
+- name: powerlines-power-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-hot-spicy.jpg
+- name: amusement-park-amusement-park-2-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-free-woman.jpg
+- name: abe-lincoln-one-rainbow-festival-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-15-87.jpg
+- name: legal-statue-legalstatue-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-cinnamon-rolls.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colorful-blocks.png
+- name: cargo-ship-cargo-ship-on-sea-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-plentiful.jpg
+- name: downtheline-downtheline-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-smooth-ride.jpg
+- name: oldroad-old-road-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-spagetti-accident.jpg
+- name: lincoln-memorial-lincolnmemorial-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purple-storm.jpg
+- name: aws-s3-stories-copper-servers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-copper-servers.jpg
+- name: copper-circuit-DSC_0001.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0001.jpg
+- name: old-cabin-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-alien-goggles.jpg
+- name: old-house-oldhouse-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-nazi-poster.jpg
+- name: trucksilo-trucksilo.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo.jpg
+- name: blossombar-crafty-painting-file-00-00-50-52.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-52.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-neo-instinct.jpg
+- name: carry-load-carryload-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-dresden.jpg
+- name: stories-sand-hand-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-sand-hand-dali-three.jpg
+- name: hollywood-building-hollywood-building-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit-4.jpg
+- name: ellis-island-ellisisland-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-alien-goggles.jpg
+- name: oldroad-old-road-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-monet-one.jpg
+- name: amusement-park-amusement-park-2-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-cinnamon-rolls.jpg
+- name: rain-princess-IMG_8312.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8312.jpg
+- name: school-clouds-church-clouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kandinsky-bv.jpg
+- name: eduardo-eduardo-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-gred-mash.jpg
+- name: crow-crow-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-creativity.jpg
+- name: crow-crow-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-umberto-bocc.jpg
+- name: oldbarn-oldbarn-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-kandinsky-bv.jpg
+- name: mosaic-face-mosaic-face-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-plentiful.jpg
+- name: downtown-los-angeles-downtown-la-deep-connections.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-deep-connections.JPG
+- name: capital-battle-capitolbattle-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dali-three.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-sunday.jpg
+- name: dragon-desert-desert-dragon-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-mucha-mult.jpg
+- name: ellis-island-ellis-island-room-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-crunch-paper.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-kandinsky-bv.jpg
+- name: old-granary-field-granaryfield-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-wols.jpg
+- name: dragon-desert-desert-dragon-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dali-two.jpg
+- name: gears-4882162452-fa3126b38d-b-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-marcel-duchamp.jpg
+- name: docks-docks-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-alien-goggles.jpg
+- name: miamibeach-miamibeach-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-smoking-cigarette.jpg
+- name: capital-battle-capitolbattle-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-brush.jpg
+- name: old-door-lock-old-door-lock-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-clean-view.jpg
+- name: power-lines-power-lines-empty-space-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-post-modern.jpg
+- name: curtain-curtain-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-cinnamon-rolls.jpg
+- name: legal-statue-legalstatue-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-atari-missle.jpg
 ---
 Argentina Contemplates Its Future After Another Elimination.&nbsp;Grinding The Coffee Beans.&nbsp;Woodhaven High School Grad Receives Scholarship.&nbsp;On The Eve Of Deployment, A 5K Farewell For Local Veteran.&nbsp;Sharjah Municipality Selects MediaINFO.&nbsp;Mariah Eriksen Earns Social Work Degree.&nbsp;Kingstree Administration Looking To Brand City.&nbsp;Charges Dropped In Phillies' Herrera's Domestic Assault Case.&nbsp;
